Refactored Application. Database still needs work. Insertion of Instrument types still needs accounting for. So do the views.